--- a/rag.ipynb
+++ b/rag.ipynb
@@ -2,23 +2,36 @@
  "cells": [
   {
    "cell_type": "code",
-   "execution_count": 2,
+   "execution_count": 5,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "import dspy\n",
+    "import os\n",
+    "from dotenv import load_dotenv\n",
+    "\n",
+    "load_dotenv()\n",
+    "\n",
+    "lm = dspy.LM('openai/gpt-4o-mini')\n",
+    "dspy.configure(lm=lm)"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 6,
    "metadata": {},
    "outputs": [
     {
-     "name": "stderr",
+     "name": "stdout",
      "output_type": "stream",
      "text": [
-      "/Users/aidand/dev/hello-dspy/env/lib/python3.10/site-packages/tqdm/auto.py:21: TqdmWarning: IProgress not found. Please update jupyter and ipywidgets. See https://ipywidgets.readthedocs.io/en/stable/user_install.html\n",
-      "  from .autonotebook import tqdm as notebook_tqdm\n"
+      "['The capital of France is Paris.']\n"
      ]
     }
    ],
    "source": [
-    "import dspy\n",
-    "\n",
-    "lm = dspy.LM('openai/gpt-4o-mini')\n",
-    "dspy.configure(lm=lm)"
+    "response = lm(\"What is the capital of France?\")\n",
+    "print(response)"
    ]
   }
  ],
