--- a/rag.ipynb
+++ b/rag.ipynb
@@ -2,7 +2,46 @@
  "cells": [
   {
    "cell_type": "code",
-   "execution_count": 5,
+   "execution_count": 28,
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stderr",
+     "output_type": "stream",
+     "text": [
+      "2025/03/11 20:49:22 INFO mlflow.tracking.fluent: Experiment with name 'DSPy' does not exist. Creating a new experiment.\n"
+     ]
+    },
+    {
+     "data": {
+      "text/plain": [
+       "<Experiment: artifact_location='mlflow-artifacts:/374362034103955121', creation_time=1741686562632, experiment_id='374362034103955121', last_update_time=1741686562632, lifecycle_stage='active', name='DSPy', tags={}>"
+      ]
+     },
+     "execution_count": 28,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "import mlflow\n",
+    "\n",
+    "mlflow.set_tracking_uri(\"http://localhost:5000\")\n",
+    "mlflow.set_experiment(\"DSPy\")"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 29,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "mlflow.dspy.autolog()"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 30,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -19,7 +58,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 6,
+   "execution_count": 31,
    "metadata": {},
    "outputs": [
     {
@@ -28,6 +67,52 @@
      "text": [
       "['The capital of France is Paris.']\n"
      ]
+    },
+    {
+     "data": {
+      "text/html": [
+       "\n",
+       "<div>\n",
+       "  <style scoped>\n",
+       "  button {\n",
+       "    border: none;\n",
+       "    border-radius: 4px;\n",
+       "    background-color: rgb(34, 114, 180);\n",
+       "    font-family: -apple-system, \"system-ui\", \"Segoe UI\", Roboto, \"Helvetica Neue\", Arial;\n",
+       "    font-size: 13px;\n",
+       "    color: white;\n",
+       "    margin-top: 8px;\n",
+       "    margin-bottom: 8px;\n",
+       "    padding: 8px 16px;\n",
+       "    cursor: pointer;\n",
+       "  }\n",
+       "  button:hover {\n",
+       "    background-color: rgb(66, 153, 224);\n",
+       "  }\n",
+       "  </style>\n",
+       "  <button\n",
+       "    onclick=\"\n",
+       "        const display = this.nextElementSibling.style.display;\n",
+       "        const isCollapsed = display === 'none';\n",
+       "        this.nextElementSibling.style.display = isCollapsed ? null : 'none';\n",
+       "\n",
+       "        const verb = isCollapsed ? 'Collapse' : 'Expand';\n",
+       "        this.innerText = `${verb} MLflow Trace`;\n",
+       "    \"\n",
+       "  >Collapse MLflow Trace</button>\n",
+       "  <iframe\n",
+       "    id=\"trace-renderer\"\n",
+       "    style=\"width: 100%; height: 500px; border: none; resize: vertical;\"\n",
+       "    src=\"http://localhost:5000/static-files/lib/notebook-trace-renderer/index.html?trace_id=fccf87ddd6cb4a118f814a010df437cf&amp;experiment_id=374362034103955121&amp;version=2.20.3\"\n",
+       "  />\n",
+       "</div>\n"
+      ],
+      "text/plain": [
+       "Trace(request_id=fccf87ddd6cb4a118f814a010df437cf)"
+      ]
+     },
+     "metadata": {},
+     "output_type": "display_data"
     }
    ],
    "source": [
@@ -37,49 +122,25 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 25,
+   "execution_count": 32,
    "metadata": {},
    "outputs": [
-    {
-     "data": {
-      "text/plain": [
-       "'In Linux, \"high memory\" and \"low memory\" refer to different regions of the system\\'s memory address space, particularly in the context of how the kernel manages memory for processes.\\n\\n- **Low Memory**: This typically refers to the memory that is directly accessible by the kernel and can be used by processes without any special handling. In a 32-bit system, this is usually the first 896 MB of RAM (though this can vary based on the architecture and configuration). Low memory is used for kernel data structures and for user processes that require direct access to memory.\\n\\n- **High Memory**: This refers to memory that is above the addressable range of the kernel in a 32-bit system. Since the kernel can only directly access a limited amount of memory (due to the 4 GB address space limitation), any memory above this limit is considered high memory. Processes can still use this memory, but the kernel must use special mechanisms (like paging) to access it. High memory is more relevant in systems with large amounts of RAM, where the kernel cannot map all of it into its address space.\\n\\nIn summary, low memory is directly accessible by the kernel, while high memory requires additional handling for the kernel to access it, especially in 32-bit systems. In 64-bit systems, the distinction is less significant due to the larger addressable memory space.'"
-      ]
-     },
-     "metadata": {},
-     "output_type": "display_data"
-    },
-    {
-     "data": {
-      "text/plain": [
-       "'\\nPrompt template:'"
-      ]
-     },
-     "metadata": {},
-     "output_type": "display_data"
-    },
-    {
-     "data": {
-      "text/plain": [
-       "StringSignature(question -> response\n",
-       "    instructions='Given the fields `question`, produce the fields `response`.'\n",
-       "    question = Field(annotation=str required=True json_schema_extra={'__dspy_field_type': 'input', 'prefix': 'Question:', 'desc': '${question}'})\n",
-       "    response = Field(annotation=str required=True json_schema_extra={'__dspy_field_type': 'output', 'prefix': 'Response:', 'desc': '${response}'})\n",
-       ")"
-      ]
-     },
-     "metadata": {},
-     "output_type": "display_data"
-    },
     {
      "name": "stdout",
      "output_type": "stream",
      "text": [
+      "In Linux, \"high memory\" and \"low memory\" refer to different regions of the system's memory address space, particularly in the context of how the kernel manages memory for processes.\n",
+      "\n",
+      "- **Low Memory**: This typically refers to the memory that is directly accessible by the kernel and can be used by processes without any special handling. In a 32-bit system, this is usually the first 896 MB of RAM (though this can vary based on the architecture and configuration). Low memory is used for kernel data structures and for user processes that require direct access to memory.\n",
+      "\n",
+      "- **High Memory**: This refers to memory that is above the addressable range of the kernel in a 32-bit system. Since the kernel can only directly access a limited amount of memory (due to the 4 GB address space limitation), any memory above this limit is considered high memory. Processes can still use this memory, but the kernel must use special mechanisms (like paging) to access it. High memory is more relevant in systems with large amounts of RAM, where the kernel cannot map all of it into its address space.\n",
+      "\n",
+      "In summary, low memory is directly accessible by the kernel, while high memory requires additional handling for the kernel to access it, especially in 32-bit systems. In 64-bit systems, the distinction is less significant due to the larger addressable memory space.\n",
       "\n",
       "\n",
       "\n",
       "\n",
-      "\u001b[34m[2025-03-11T20:42:08.892515]\u001b[0m\n",
+      "\u001b[34m[2025-03-11T20:57:52.968885]\u001b[0m\n",
       "\n",
       "\u001b[31mSystem message:\u001b[0m\n",
       "\n",
@@ -129,19 +190,68 @@
       "\n",
       "\n"
      ]
+    },
+    {
+     "data": {
+      "text/html": [
+       "\n",
+       "<div>\n",
+       "  <style scoped>\n",
+       "  button {\n",
+       "    border: none;\n",
+       "    border-radius: 4px;\n",
+       "    background-color: rgb(34, 114, 180);\n",
+       "    font-family: -apple-system, \"system-ui\", \"Segoe UI\", Roboto, \"Helvetica Neue\", Arial;\n",
+       "    font-size: 13px;\n",
+       "    color: white;\n",
+       "    margin-top: 8px;\n",
+       "    margin-bottom: 8px;\n",
+       "    padding: 8px 16px;\n",
+       "    cursor: pointer;\n",
+       "  }\n",
+       "  button:hover {\n",
+       "    background-color: rgb(66, 153, 224);\n",
+       "  }\n",
+       "  </style>\n",
+       "  <button\n",
+       "    onclick=\"\n",
+       "        const display = this.nextElementSibling.style.display;\n",
+       "        const isCollapsed = display === 'none';\n",
+       "        this.nextElementSibling.style.display = isCollapsed ? null : 'none';\n",
+       "\n",
+       "        const verb = isCollapsed ? 'Collapse' : 'Expand';\n",
+       "        this.innerText = `${verb} MLflow Trace`;\n",
+       "    \"\n",
+       "  >Collapse MLflow Trace</button>\n",
+       "  <iframe\n",
+       "    id=\"trace-renderer\"\n",
+       "    style=\"width: 100%; height: 500px; border: none; resize: vertical;\"\n",
+       "    src=\"http://localhost:5000/static-files/lib/notebook-trace-renderer/index.html?trace_id=c439a1f905c141c1a4735ca0ff2a72c2&amp;experiment_id=374362034103955121&amp;version=2.20.3\"\n",
+       "  />\n",
+       "</div>\n"
+      ],
+      "text/plain": [
+       "Trace(request_id=c439a1f905c141c1a4735ca0ff2a72c2)"
+      ]
+     },
+     "metadata": {},
+     "output_type": "display_data"
     }
    ],
    "source": [
     "qa = dspy.Predict('question: str -> response: str')\n",
     "response = qa(question=\"what are high memory and low memory on linux?\")\n",
-    "\n",
-    "display(response.response)\n",
-    "\n",
-    "display(\"\\nPrompt template:\")\n",
-    "display(qa.signature)\n",
+    "print(response.response)\n",
     "\n",
     "lm.inspect_history(n=1)"
    ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": []
   }
  ],
  "metadata": {
