--- a/rag.ipynb
+++ b/rag.ipynb
@@ -248,10 +248,73 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 33,
    "metadata": {},
-   "outputs": [],
-   "source": []
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "Prediction(\n",
+       "    reasoning='The placement of curly braces on their own line is largely a matter of coding style and conventions. In some programming languages and style guides, such as the Allman style, it is common to place opening curly braces on a new line to enhance readability. This can help visually separate blocks of code. In contrast, other styles, like K&R style, place the opening brace on the same line as the control statement, which can save vertical space. Ultimately, whether curly braces should appear on their own line depends on the coding standards being followed in a particular project or organization.',\n",
+       "    response=\"Curly braces can appear on their own line depending on the coding style you are following. If you are using a style that emphasizes readability, such as the Allman style, then yes, they should be on their own line. If you are following a more compact style like K&R, then they would typically be on the same line. It's best to adhere to the conventions of the project you are working on.\"\n",
+       ")"
+      ]
+     },
+     "execution_count": 33,
+     "metadata": {},
+     "output_type": "execute_result"
+    },
+    {
+     "data": {
+      "text/html": [
+       "\n",
+       "<div>\n",
+       "  <style scoped>\n",
+       "  button {\n",
+       "    border: none;\n",
+       "    border-radius: 4px;\n",
+       "    background-color: rgb(34, 114, 180);\n",
+       "    font-family: -apple-system, \"system-ui\", \"Segoe UI\", Roboto, \"Helvetica Neue\", Arial;\n",
+       "    font-size: 13px;\n",
+       "    color: white;\n",
+       "    margin-top: 8px;\n",
+       "    margin-bottom: 8px;\n",
+       "    padding: 8px 16px;\n",
+       "    cursor: pointer;\n",
+       "  }\n",
+       "  button:hover {\n",
+       "    background-color: rgb(66, 153, 224);\n",
+       "  }\n",
+       "  </style>\n",
+       "  <button\n",
+       "    onclick=\"\n",
+       "        const display = this.nextElementSibling.style.display;\n",
+       "        const isCollapsed = display === 'none';\n",
+       "        this.nextElementSibling.style.display = isCollapsed ? null : 'none';\n",
+       "\n",
+       "        const verb = isCollapsed ? 'Collapse' : 'Expand';\n",
+       "        this.innerText = `${verb} MLflow Trace`;\n",
+       "    \"\n",
+       "  >Collapse MLflow Trace</button>\n",
+       "  <iframe\n",
+       "    id=\"trace-renderer\"\n",
+       "    style=\"width: 100%; height: 500px; border: none; resize: vertical;\"\n",
+       "    src=\"http://localhost:5000/static-files/lib/notebook-trace-renderer/index.html?trace_id=0952430fc6f84f26ad8a80fa9633d6f8&amp;experiment_id=374362034103955121&amp;version=2.20.3\"\n",
+       "  />\n",
+       "</div>\n"
+      ],
+      "text/plain": [
+       "Trace(request_id=0952430fc6f84f26ad8a80fa9633d6f8)"
+      ]
+     },
+     "metadata": {},
+     "output_type": "display_data"
+    }
+   ],
+   "source": [
+    "cot = dspy.ChainOfThought('question -> response')\n",
+    "cot(question=\"should curly braces appear on their own line?\")"
+   ]
   }
  ],
  "metadata": {
