--- a/rag.ipynb
+++ b/rag.ipynb
@@ -2,23 +2,16 @@
  "cells": [
   {
    "cell_type": "code",
-   "execution_count": 28,
+   "execution_count": 2,
    "metadata": {},
    "outputs": [
-    {
-     "name": "stderr",
-     "output_type": "stream",
-     "text": [
-      "2025/03/11 20:49:22 INFO mlflow.tracking.fluent: Experiment with name 'DSPy' does not exist. Creating a new experiment.\n"
-     ]
-    },
     {
      "data": {
       "text/plain": [
        "<Experiment: artifact_location='mlflow-artifacts:/374362034103955121', creation_time=1741686562632, experiment_id='374362034103955121', last_update_time=1741686562632, lifecycle_stage='active', name='DSPy', tags={}>"
       ]
      },
-     "execution_count": 28,
+     "execution_count": 2,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -32,16 +25,25 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 29,
+   "execution_count": 3,
    "metadata": {},
-   "outputs": [],
+   "outputs": [
+    {
+     "name": "stderr",
+     "output_type": "stream",
+     "text": [
+      "/Users/aidand/dev/hello-dspy/env/lib/python3.10/site-packages/tqdm/auto.py:21: TqdmWarning: IProgress not found. Please update jupyter and ipywidgets. See https://ipywidgets.readthedocs.io/en/stable/user_install.html\n",
+      "  from .autonotebook import tqdm as notebook_tqdm\n"
+     ]
+    }
+   ],
    "source": [
     "mlflow.dspy.autolog()"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 30,
+   "execution_count": 4,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -58,7 +60,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 31,
+   "execution_count": 5,
    "metadata": {},
    "outputs": [
     {
@@ -103,12 +105,12 @@
        "  <iframe\n",
        "    id=\"trace-renderer\"\n",
        "    style=\"width: 100%; height: 500px; border: none; resize: vertical;\"\n",
-       "    src=\"http://localhost:5000/static-files/lib/notebook-trace-renderer/index.html?trace_id=fccf87ddd6cb4a118f814a010df437cf&amp;experiment_id=374362034103955121&amp;version=2.20.3\"\n",
+       "    src=\"http://localhost:5000/static-files/lib/notebook-trace-renderer/index.html?trace_id=1c6987fd58bb4a2381127fae95d64a82&amp;experiment_id=374362034103955121&amp;version=2.20.3\"\n",
        "  />\n",
        "</div>\n"
       ],
       "text/plain": [
-       "Trace(request_id=fccf87ddd6cb4a118f814a010df437cf)"
+       "Trace(request_id=1c6987fd58bb4a2381127fae95d64a82)"
       ]
      },
      "metadata": {},
@@ -122,7 +124,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 32,
+   "execution_count": 6,
    "metadata": {},
    "outputs": [
     {
@@ -140,7 +142,7 @@
       "\n",
       "\n",
       "\n",
-      "\u001b[34m[2025-03-11T20:57:52.968885]\u001b[0m\n",
+      "\u001b[34m[2025-03-11T21:10:27.172339]\u001b[0m\n",
       "\n",
       "\u001b[31mSystem message:\u001b[0m\n",
       "\n",
@@ -226,12 +228,12 @@
        "  <iframe\n",
        "    id=\"trace-renderer\"\n",
        "    style=\"width: 100%; height: 500px; border: none; resize: vertical;\"\n",
-       "    src=\"http://localhost:5000/static-files/lib/notebook-trace-renderer/index.html?trace_id=c439a1f905c141c1a4735ca0ff2a72c2&amp;experiment_id=374362034103955121&amp;version=2.20.3\"\n",
+       "    src=\"http://localhost:5000/static-files/lib/notebook-trace-renderer/index.html?trace_id=550a889132af46c9b8ca417da08c2b0c&amp;experiment_id=374362034103955121&amp;version=2.20.3\"\n",
        "  />\n",
        "</div>\n"
       ],
       "text/plain": [
-       "Trace(request_id=c439a1f905c141c1a4735ca0ff2a72c2)"
+       "Trace(request_id=550a889132af46c9b8ca417da08c2b0c)"
       ]
      },
      "metadata": {},
@@ -248,7 +250,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 33,
+   "execution_count": 7,
    "metadata": {},
    "outputs": [
     {
@@ -260,7 +262,7 @@
        ")"
       ]
      },
-     "execution_count": 33,
+     "execution_count": 7,
      "metadata": {},
      "output_type": "execute_result"
     },
@@ -299,12 +301,12 @@
        "  <iframe\n",
        "    id=\"trace-renderer\"\n",
        "    style=\"width: 100%; height: 500px; border: none; resize: vertical;\"\n",
-       "    src=\"http://localhost:5000/static-files/lib/notebook-trace-renderer/index.html?trace_id=0952430fc6f84f26ad8a80fa9633d6f8&amp;experiment_id=374362034103955121&amp;version=2.20.3\"\n",
+       "    src=\"http://localhost:5000/static-files/lib/notebook-trace-renderer/index.html?trace_id=010db365d4a746a19253e1e58fdbb57d&amp;experiment_id=374362034103955121&amp;version=2.20.3\"\n",
        "  />\n",
        "</div>\n"
       ],
       "text/plain": [
-       "Trace(request_id=0952430fc6f84f26ad8a80fa9633d6f8)"
+       "Trace(request_id=010db365d4a746a19253e1e58fdbb57d)"
       ]
      },
      "metadata": {},
@@ -314,6 +316,179 @@
    "source": [
     "cot = dspy.ChainOfThought('question -> response')\n",
     "cot(question=\"should curly braces appear on their own line?\")"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 8,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "import ujson\n",
+    "from dspy.utils import download\n",
+    "\n",
+    "# Download question--answer pairs from the RAG-QA Arena \"Tech\" dataset.\n",
+    "download(\"https://huggingface.co/dspy/cache/resolve/main/ragqa_arena_tech_examples.jsonl\")\n",
+    "\n",
+    "with open(\"ragqa_arena_tech_examples.jsonl\") as f:\n",
+    "    data = [ujson.loads(line) for line in f]"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 9,
+   "metadata": {},
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "{'question': 'why igp is used in mpls?',\n",
+       " 'response': \"An IGP exchanges routing prefixes between gateways/routers.  \\nWithout a routing protocol, you'd have to configure each route on every router and you'd have no dynamic updates when routes change because of link failures. \\nFuthermore, within an MPLS network, an IGP is vital for advertising the internal topology and ensuring connectivity for MP-BGP inside the network.\",\n",
+       " 'gold_doc_ids': [2822, 2823]}"
+      ]
+     },
+     "execution_count": 9,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "# Inspect one datapoint.\n",
+    "data[0]"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 10,
+   "metadata": {},
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "Example({'question': 'why are my text messages coming up as maybe?', 'response': 'This is part of the Proactivity features new with iOS 9: It looks at info in emails to see if anyone with this number sent you an email and if it finds the phone number associated with a contact from your email, it will show you \"Maybe\". \\n\\nHowever, it has been suggested there is a bug in iOS 11.2 that can result in \"Maybe\" being displayed even when \"Find Contacts in Other Apps\" is disabled.', 'gold_doc_ids': [3956, 3957, 8034]}) (input_keys={'question'})"
+      ]
+     },
+     "execution_count": 10,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "data = [dspy.Example(**d).with_inputs('question') for d in data]\n",
+    "\n",
+    "# Let's pick an `example` here from the data.\n",
+    "example = data[2]\n",
+    "example"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 11,
+   "metadata": {},
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "(200, 300, 500)"
+      ]
+     },
+     "execution_count": 11,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "import random\n",
+    "\n",
+    "random.Random(0).shuffle(data)\n",
+    "trainset, devset, testset = data[:200], data[200:500], data[500:1000]\n",
+    "\n",
+    "len(trainset), len(devset), len(testset)"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 12,
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "Question: \t why are my text messages coming up as maybe?\n",
+      "\n",
+      "Gold Response: \t This is part of the Proactivity features new with iOS 9: It looks at info in emails to see if anyone with this number sent you an email and if it finds the phone number associated with a contact from your email, it will show you \"Maybe\". \n",
+      "\n",
+      "However, it has been suggested there is a bug in iOS 11.2 that can result in \"Maybe\" being displayed even when \"Find Contacts in Other Apps\" is disabled.\n",
+      "\n",
+      "Predicted Response: \t Your text messages are showing up as \"maybe\" because the recipient's messaging app is unsure about the sender's identity. This can occur if you're not in their contacts or if the app is trying to filter out potential spam. To resolve this, you can ask the recipient to save your number or check their messaging app settings.\n",
+      "\n",
+      "Semantic F1 Score: 0.33\n"
+     ]
+    },
+    {
+     "data": {
+      "text/html": [
+       "\n",
+       "<div>\n",
+       "  <style scoped>\n",
+       "  button {\n",
+       "    border: none;\n",
+       "    border-radius: 4px;\n",
+       "    background-color: rgb(34, 114, 180);\n",
+       "    font-family: -apple-system, \"system-ui\", \"Segoe UI\", Roboto, \"Helvetica Neue\", Arial;\n",
+       "    font-size: 13px;\n",
+       "    color: white;\n",
+       "    margin-top: 8px;\n",
+       "    margin-bottom: 8px;\n",
+       "    padding: 8px 16px;\n",
+       "    cursor: pointer;\n",
+       "  }\n",
+       "  button:hover {\n",
+       "    background-color: rgb(66, 153, 224);\n",
+       "  }\n",
+       "  </style>\n",
+       "  <button\n",
+       "    onclick=\"\n",
+       "        const display = this.nextElementSibling.style.display;\n",
+       "        const isCollapsed = display === 'none';\n",
+       "        this.nextElementSibling.style.display = isCollapsed ? null : 'none';\n",
+       "\n",
+       "        const verb = isCollapsed ? 'Collapse' : 'Expand';\n",
+       "        this.innerText = `${verb} MLflow Trace`;\n",
+       "    \"\n",
+       "  >Collapse MLflow Trace</button>\n",
+       "  <iframe\n",
+       "    id=\"trace-renderer\"\n",
+       "    style=\"width: 100%; height: 500px; border: none; resize: vertical;\"\n",
+       "    src=\"http://localhost:5000/static-files/lib/notebook-trace-renderer/index.html?trace_id=41674e0cc334491fa5804516a3af9a9f&amp;experiment_id=374362034103955121&amp;trace_id=e4489feb136c4a078a8b297f6d1cb618&amp;experiment_id=374362034103955121&amp;version=2.20.3\"\n",
+       "  />\n",
+       "</div>\n"
+      ],
+      "text/plain": [
+       "[Trace(request_id=41674e0cc334491fa5804516a3af9a9f), Trace(request_id=e4489feb136c4a078a8b297f6d1cb618)]"
+      ]
+     },
+     "metadata": {},
+     "output_type": "display_data"
+    }
+   ],
+   "source": [
+    "from dspy.evaluate import SemanticF1\n",
+    "\n",
+    "# Instantiate the metric.\n",
+    "metric = SemanticF1(decompositional=True)\n",
+    "\n",
+    "# Produce a prediction from our `cot` module, using the `example` above as input.\n",
+    "pred = cot(**example.inputs())\n",
+    "\n",
+    "# Compute the metric score for the prediction.\n",
+    "score = metric(example, pred)\n",
+    "\n",
+    "print(f\"Question: \\t {example.question}\\n\")\n",
+    "print(f\"Gold Response: \\t {example.response}\\n\")\n",
+    "print(f\"Predicted Response: \\t {pred.response}\\n\")\n",
+    "print(f\"Semantic F1 Score: {score:.2f}\")"
    ]
   },
   {
